--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.3",
+    "vue-material-design-icons": "^1.0.0",
+    "vue-paypal-checkout": "^2.1.8",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.6"
   },
