--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^4.9.0",
     "vue": "^2.5.3",
     "vue-material-design-icons": "^1.0.0",
     "vue-paypal-checkout": "^2.1.8",
