--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "firebase": "^4.9.0",
+    "jshint": "^2.9.5",
     "vue": "^2.5.3",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-material-design-icons": "^1.0.0",
     "vue-paypal-checkout": "^2.1.8",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.17.6"
+    "vuetify": "^0.17.6",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
