--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "avoriaz": "^6.3.0",
     "firebase": "^4.10.0",
     "vue": "^2.5.2",
     "vue-material-design-icons": "^1.1.0",
