--- a/.babelrc
+++ b/.babelrc
@@ -11,8 +11,7 @@
   "plugins": ["transform-vue-jsx", "transform-runtime"],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["transform-vue-jsx", "istanbul"]
+      "presets": ["env", "stage-2"]
     }
   }
 }
